test fix: overflow issue

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
+    overflow-x: hidden;
 }
 .midSection{
     display: flex;
